--- a/index.html
+++ b/index.html
@@ -60,97 +60,88 @@
                 </div><div></div></div></div>
                     </div></div>
 
-  
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-
-<script>
-    var defaultPhoto = "https://cdn-icons-png.flaticon.com/512/149/149071.png";
-
+  <script>
     var chart = new OrgChart(document.getElementById("tree"), {
-        template: "ana",
-        enableSearch: true,
-        nodeBinding: {
-            field_0: "name",
-            field_1: "title",
-            field_2: "phone",
-            img_0: "photo"
-        },
-        tags: {
-            centered: {
-                node: {
-                    name: { align: "center" },
-                    title: { align: "center" },
-                    phone: { align: "center" }
-                }
-            }
-        },
-        editForm: {
-            titleBinding: "title",
-            elements: [
-                { type: 'textbox', label: 'Tên', binding: 'name' },
-                { type: 'textbox', label: 'Chức vụ', binding: 'title' },
-                { type: 'textbox', label: 'Số điện thoại', binding: 'phone' },
-                { type: 'textbox', label: 'Link hình ảnh', binding: 'photo' }
-            ]
-        },
-        nodeMenu: {
-            edit: { text: "Chỉnh sửa" },
-            add: { text: "Thêm cấp dưới" },
-            remove: { text: "Xóa" }
-        },
-        nodeMouseClick: OrgChart.action.edit,
-        nodes: JSON.parse(localStorage.getItem("ubndChartData")) || [
-            { id: 1, name: "Phạm Xuân Nam", title: "CHỦ TỊCH UBND", phone: "0123456789", photo: "", tags: ["centered"] }
-        ]
-    });
-
-    chart.on('render', function(sender, args) {
-        if (!args.node.photo) {
-            args.node.photo = defaultPhoto;
+      template: "ana",
+      enableSearch: true,
+      nodeBinding: {
+        field_0: "name",
+        field_1: "title"
+      },
+      tags: {
+        centered: {
+          node: {
+            name: { align: "center" },
+            title: { align: "center" }
+          }
         }
+      },
+      editForm: {
+        titleBinding: "title",
+        elements: [
+          { type: 'textbox', label: 'Tên', binding: 'name' },
+          { type: 'textbox', label: 'Chức vụ', binding: 'title' }
+        ]
+      },
+      nodeMenu: {
+        edit: { text: "Chỉnh sửa" },
+        add: { text: "Thêm cấp dưới" },
+        remove: { text: "Xóa" }
+      },
+      nodes: [
+        { id: 1, name: "Phạm Xuân Nam", title: "CHỦ TỊCH UBND", tags: ["centered"] },
+        { id: 2, pid: 1, name: "Trần Quốc Tuấn", title: "PHÓ CHỦ TỊCH – GIÁM ĐỐC TTHCC", tags: ["centered"] },
+        { id: 3, pid: 2, name: "Lê Thị Kiều Trang", title: "PHÓ GIÁM ĐỐC TTHCC", tags: ["centered"] },
+        { id: 4, pid: 1, name: "Nguyễn Thanh Tú", title: "PHÓ CHỦ TỊCH", tags: ["centered"] },
+
+        { id: 5, pid: 4, name: "Nguyễn Thế Vinh", title: "CHÁNH VP HĐND-UBND", tags: ["centered"] },
+        { id: 6, pid: 5, name: "Nguyễn Lê Trường Hải", title: "PHÓ CHÁNH VP", tags: ["centered"] },
+
+        { id: 7, pid: 4, name: "Nguyễn Thị Thanh Hà", title: "TRƯỞNG PHÒNG VH-XH", tags: ["centered"] },
+        { id: 8, pid: 7, name: "Lý Trường Kỳ", title: "PHÓ TRƯỞNG PHÒNG VĂN HÓA", tags: ["centered"] },
+
+        { id: 9, pid: 8, name: "Phạm Thị Huỳnh Diệp", title: "TỔ NỘI VỤ - CCHC", tags: ["centered"] },
+        { id: 10, pid: 9, name: "Trần Thị Thanh Hòa", tags: ["centered"] },
+        { id: 11, pid: 9, name: "Hà Thị Kim Trang", tags: ["centered"] },
+        { id: 12, pid: 9, name: "Đỗ Thị Thùy Dung", tags: ["centered"] },
+        { id: 13, pid: 9, name: "Trương Thị Kim Hạnh", tags: ["centered"] },
+        { id: 14, pid: 9, name: "Nguyễn Thị Thu Trang", tags: ["centered"] },
+
+        { id: 15, pid: 8, name: "Nguyễn Thị Ngọc Diễm", title: "TỔ GD&ĐT - KH - CĐS", tags: ["centered"] },
+        { id: 16, pid: 15, name: "Nguyễn Thị Kim Hiền", tags: ["centered"] },
+        { id: 17, pid: 15, name: "Trần Trường Hưng", tags: ["centered"] },
+        { id: 18, pid: 15, name: "Nguyễn Thị Mai Hương", tags: ["centered"] },
+
+        { id: 19, pid: 8, name: "Lê Thị Ngọc Ánh", title: "TỔ Y TẾ - DS - TE", tags: ["centered"] },
+        { id: 20, pid: 19, name: "Trương Thị Thanh Trúc", tags: ["centered"] },
+        { id: 21, pid: 19, name: "Trần Nguyễn Hoàn Châu", tags: ["centered"] },
+        { id: 22, pid: 19, name: "Nguyễn Thị Phương Hồng", tags: ["centered"] },
+        { id: 23, pid: 19, name: "Nguyễn Thị Thùy Trang", tags: ["centered"] },
+        { id: 24, pid: 19, name: "Trần Thị Thanh Thúy", tags: ["centered"] },
+        { id: 25, pid: 19, name: "Lê Hoàng Thúy Phương", tags: ["centered"] },
+
+        { id: 26, pid: 8, name: "Lê Thị Thu Huyền", title: "TỔ LĐ - VL - CSCC", tags: ["centered"] },
+        { id: 27, pid: 26, name: "Lê Duy Khánh", tags: ["centered"] },
+        { id: 28, pid: 26, name: "Lê Thị Kiều Phúc", tags: ["centered"] },
+        { id: 29, pid: 26, name: "Nguyễn Thị Hồng Yến", tags: ["centered"] },
+
+        { id: 30, pid: 8, name: "Lê Thị Thu Tiên", title: "TỔ VĂN HÓA", tags: ["centered"] },
+        { id: 31, pid: 30, name: "Huỳnh Thị Thanh Phương", tags: ["centered"] },
+        { id: 32, pid: 30, name: "Trần Thị Thu Thương", tags: ["centered"] },
+        { id: 33, pid: 30, name: "Trần Văn Vui", tags: ["centered"] },
+
+        { id: 34, pid: 4, name: "Nguyễn Hoàng Phương Ly", title: "TRƯỞNG PHÒNG KINH TẾ", tags: ["centered"] },
+        { id: 35, pid: 34, name: "Nguyễn Chí Kiên", title: "PHÓ TRƯỞNG PHÒNG KINH TẾ", tags: ["centered"] },
+
+        { id: 36, pid: 35, name: "Lương Quang Minh", title: "TỔ TÀI CHÍNH KẾ HOẠCH", tags: ["centered"] },
+        { id: 37, pid: 36, name: "Lê Minh Thanh", tags: ["centered"] },
+        { id: 38, pid: 36, name: "Trần Thị Hồng Nga", tags: ["centered"] },
+        { id: 39, pid: 36, name: "Chung Ngọc Giao", tags: ["centered"] },
+        { id: 40, pid: 36, name: "Huỳnh Thị Ngọc Tú", tags: ["centered"] },
+        { id: 41, pid: 36, name: "Nguyễn Thị Lệ Trinh", tags: ["centered"] }
+      ]
     });
-
-    chart.on('updated', function (sender, oldNode, newNode) {
-        const allNodes = sender.nodes.map(n => n);
-        localStorage.setItem("ubndChartData", JSON.stringify(allNodes));
-    });
-
-    function saveChart() {
-        const allNodes = chart.nodes.map(n => n);
-        localStorage.setItem("ubndChartData", JSON.stringify(allNodes));
-        alert("Đã lưu sơ đồ vào trình duyệt!");
-    }
-
-    function downloadImage() {
-        html2canvas(document.getElementById("tree")).then(canvas => {
-            var link = document.createElement("a");
-            link.download = "so_do_ubnd.png";
-            link.href = canvas.toDataURL();
-            link.click();
-        });
-    }
-
-    function downloadPDF() {
-        html2canvas(document.getElementById("tree")).then(canvas => {
-            const { jsPDF } = window.jspdf;
-            const pdf = new jsPDF("l", "mm", "a4");
-            const imgData = canvas.toDataURL("image/png");
-            const imgProps = pdf.getImageProperties(imgData);
-            const pdfWidth = pdf.internal.pageSize.getWidth();
-            const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
-            pdf.addImage(imgData, "PNG", 0, 0, pdfWidth, pdfHeight);
-            pdf.save("so_do_ubnd.pdf");
-        });
-    }
-</script>
-
-<div style="position: fixed; top: 20px; left: 20px; z-index: 1000;">
-    <button onclick="saveChart()">💾 Lưu sơ đồ</button>
-    <button onclick="downloadImage()">🖼️ Tải ảnh</button>
-    <button onclick="downloadPDF()">📄 Tải PDF</button>
-</div>
-
+  </script>
 
 
 <div id="orgchart_js_test_div" style="position: fixed; top: -10000px; left: -10000px;"><svg><text data-width="130" data-text-overflow="multiline" style="font-size: 14px;" fill="#ffffff" x="230" y="30" text-anchor="end"></text></svg></div></body></html>
