--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Sơ đồ tổ chức UBND - Đầy đủ và có thể chỉnh sửa</title>
-  <script src="./so_do_ubnd_orgchart_full_editable_files/OrgChart.js.download"></script>
+  <script src="https://cdn.jsdelivr.net/npm/orgchart/dist/js/orgchart.js"></script> <!-- Đảm bảo bạn sử dụng CDN chính thức hoặc tải OrgChart.js từ nơi bạn lưu trữ -->
   <style>
     html, body { margin: 0; padding: 0; width: 100%; height: 100%; }
     #tree { width: 100%; height: 100vh; overflow: hidden; position: relative; }
@@ -90,7 +90,10 @@
         { id: 4, pid: 1, name: "Nguyễn Thanh Tú", title: "PHÓ CHỦ TỊCH", tags: ["centered"] },
         { id: 5, pid: 4, name: "Nguyễn Thế Vinh", title: "CHÁNH VP HĐND-UBND", tags: ["centered"] },
         { id: 6, pid: 5, name: "Nguyễn Lê Trường Hải", title: "PHÓ CHÁNH VP", tags: ["centered"] },
-        // Add more nodes as needed...
+        { id: 7, pid: 4, name: "Nguyễn Thị Thanh Hà", title: "TRƯỞNG PHÒNG VH-XH", tags: ["centered"] },
+        { id: 8, pid: 7, name: "Lý Trường Kỳ", title: "PHÓ TRƯỞNG PHÒNG VĂN HÓA", tags: ["centered"] },
+        { id: 9, pid: 8, name: "Phạm Thị Huỳnh Diệp", title: "TỔ NỘI VỤ - CCHC", tags: ["centered"] },
+        // Continue adding other nodes...
       ]
     });
 
